--- a/WhatsforDinner/MealCategories.plist
+++ b/WhatsforDinner/MealCategories.plist
@@ -2,13 +2,41 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
-	<string>Vegetarian</string>
-	<string>Vegan</string>
-	<string>Seafood</string>
-	<string>Beef</string>
-	<string>Pork</string>
-	<string>Chicken</string>
-	<string>Turkey</string>
-	<string>Lamb</string>
+	<dict>
+		<key>category</key>
+		<string>Vegetarian</string>
+		<key>imageName</key>
+		<string>foo-fried-egg</string>
+	</dict>
+	<dict>
+		<key>category</key>
+		<string>Vegan</string>
+		<key>imageName</key>
+		<string>veg-carrot</string>
+	</dict>
+	<dict>
+		<key>category</key>
+		<string>Seafood</string>
+		<key>imageName</key>
+		<string>foo-fish</string>
+	</dict>
+	<dict>
+		<key>category</key>
+		<string>Beef</string>
+		<key>imageName</key>
+		<string>foo-steak</string>
+	</dict>
+	<dict>
+		<key>category</key>
+		<string>Pork</string>
+		<key>imageName</key>
+		<string>foo-sausage</string>
+	</dict>
+	<dict>
+		<key>category</key>
+		<string>Poultry</string>
+		<key>imageName</key>
+		<string>foo-roast-chicken</string>
+	</dict>
 </array>
 </plist>
